--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --config webpack/webpack.config.ts --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,6 +22,8 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "babel-loader": "^9.1.3",
+    "esbuild": "^0.18.16",
+    "esbuild-register": "^3.4.2",
     "html-webpack-plugin": "^5.5.3",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
